Add vercel conf

--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,11 +1,10 @@
 {
-  "buildCommand": "craco build",
-  "outputDirectory": "build",
-  "framework": "create-react-app",
   "rewrites": [
     {
       "source": "/(.*)",
       "destination": "/index.html"
     }
-  ]
+  ],
+  "buildCommand": "npm install && npm run build",
+  "outputDirectory": "build"
 }
