--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,10 +1,11 @@
 {
+  "buildCommand": "npm install && npm run build",
+  "installCommand": "npm install",
+  "outputDirectory": "build",
   "rewrites": [
     {
       "source": "/(.*)",
       "destination": "/index.html"
     }
-  ],
-  "buildCommand": "npm install && npm run build",
-  "outputDirectory": "build"
+  ]
 }
