--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -8,7 +8,17 @@
   ],
   "routes": [
     {
-      "src": "/(.*)",
+      "src": "/api/(.*)",
+      "headers": {
+        "Access-Control-Allow-Origin": "https://health-hive-six.vercel.app",
+        "Access-Control-Allow-Methods": "GET,POST,PUT,DELETE,OPTIONS",
+        "Access-Control-Allow-Headers": "Content-Type, Authorization",
+        "Access-Control-Allow-Credentials": "true"
+      },
+      "continue": true
+    },
+    {
+      "src": "/api/(.*)",
       "dest": "src/index.js"
     }
   ]
